Corrigir caminhos CSS/JS para Render static site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CIMA Investimentos - Sistema de Gestão</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -596,16 +596,16 @@
   </div>
 
   <!-- JavaScript Files -->
-  <script src="js/data.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/admin.js"></script>
-  <script src="js/client.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/pdf-reports.js"></script>
-  <script src="js/data-migrator.js"></script>
-  <script src="js/api.js"></script>
-  <script src="js/import.js"></script>
-  <script src="js/main.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/auth.js"></script>
+  <script src="./js/admin.js"></script>
+  <script src="./js/client.js"></script>
+  <script src="./js/utils.js"></script>
+  <script src="./js/pdf-reports.js"></script>
+  <script src="./js/data-migrator.js"></script>
+  <script src="./js/api.js"></script>
+  <script src="./js/import.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
