--- a/index.html
+++ b/index.html
@@ -595,6 +595,16 @@
     </div>
   </div>
 
+  <!-- API Configuration -->
+  <script>
+    // Configuração da API
+    if (window.location.hostname.includes('localhost')) {
+      window.API_BASE = 'http://localhost:4000/api/v1';
+    } else {
+      window.API_BASE = 'https://cima-investimentos-api.onrender.com/api/v1';
+    }
+  </script>
+
   <!-- JavaScript Files -->
   <script src="./js/data.js"></script>
   <script src="./js/auth.js"></script>
