--- a/index.html
+++ b/index.html
@@ -181,6 +181,36 @@
         <div class="card">
           <h3>
             <div class="card-icon">
+              <i class="fas fa-plus-circle"></i>
+            </div>
+            Registrar Nova Operação
+          </h3>
+          <div class="input-group">
+            <label>
+              <i class="fas fa-calendar"></i> Data da Operação
+            </label>
+            <input type="date" id="operationDateOps">
+          </div>
+          <div class="input-group">
+            <label>
+              <i class="fas fa-percentage"></i> Resultado (%)
+            </label>
+            <input type="number" step="0.01" id="operationResultOps" placeholder="Ex: 2.5 para +2.5% ou -1.2 para -1.2%">
+          </div>
+          <div class="input-group">
+            <label>
+              <i class="fas fa-file-alt"></i> Descrição da Operação
+            </label>
+            <input type="text" id="operationDescOps" placeholder="Ex: Palmeiras x Flamengo - Over 1.5">
+          </div>
+          <button class="btn btn-success" onclick="addOperationFromOpsTab()">
+            <i class="fas fa-save"></i> Registrar Operação
+          </button>
+        </div>
+
+        <div class="card">
+          <h3>
+            <div class="card-icon">
               <i class="fas fa-history"></i>
             </div>
             Histórico de Operações
